k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:                 
  name: wisecow
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wisecow
  template:
    metadata:
      labels:
        app: wisecow
    spec:
      containers:
        - name: wisecow
          image: amalsunny27/wisecow-app:latest
          ports:
            - containerPort: 4499
          resources:
            requests:
              cpu: "100m"       
              memory: "128Mi"
            limits:
              cpu: "250m"   
              memory: "256Mi"
